--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -40,17 +40,20 @@
               <!-- <h1>About Me</h1> -->
             </div>
 
-            <p class="quote">
-              "A program is crystallized thought."
-            </p>
-            <p class="name">&mdash;Marijn Haverbeke, <i>Eloquent Javascript</i>, Ch. 8
-            </p>
+            <div class="quotes">
+              <p class="quote">
+                "A program is crystallized thought."
+              </p>
+              <p class="name">&mdash;Marijn Haverbeke, <i>Eloquent Javascript</i>, Ch. 8
+              </p>
 
-            <p class="quote">
-              "Mathematics is the language in which God has written the universe."
-            </p>
-            <p class="name">&mdash;Galileo Galilei, <i>Il Saggiatore</i>
-            </p>
+              <p class="quote">
+                "Mathematics is the language in which God has written the universe."
+              </p>
+              <p class="name">&mdash;Galileo Galilei, <i>Il Saggiatore</i>
+              </p>
+            </div>
+
           </div>
 
         </div>
