--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -17,6 +17,9 @@
 
 .description {
   margin-right: 400px;
+  font-style: Baskerville;
+  font-size: 17px;
+  line-height: 130%;
 }
 
 .iconContainer {
@@ -50,17 +53,23 @@
 
 .blogSubtitle {
   font-style: italic;
-  font-size: 18px;
+  font-size: 21px;
   font-family: Baskerville;
+  margin-bottom: 50px;
 }
 
 .blogTitle {
-  margin-top: 40px;
+  margin-top: 52px;
   font-family: Baskerville;
+  font-size: 38px;
 }
 
+/*#hardCode {
+  display: none;
+}*/
+
 hr {
-  margin-top: 30px;
+  margin-top: 52px;
   background-color: darkblue;
 }
 .head {
@@ -116,6 +125,7 @@ hr {
 
 .containerContainer li {
   margin-bottom: 22px;
+  font-size: 20px;
 }
 
 .PortHeader {
@@ -175,7 +185,7 @@ hr {
 .allposts {
   font-family: Baskerville;
   font-size: 20px;
-  margin-left: 72px;
+  margin-left: 88px;
   font-weight: bold;
   margin-bottom: -20px;
   margin-top: 25px;
@@ -210,6 +220,11 @@ hr {
 li {
   font-family: Baskerville;
   font-size: 18px;
+  /*background-color: green;*/
+}
+
+.postlist li:hover {
+  background-color: teal;
 }
 
 .PortHeader {
@@ -222,6 +237,7 @@ li {
   text-decoration: none;
   color: darkblue;
   font-family: Baskerville;
+  font-size: 19px;
 }
 
 .linkText:hover {
@@ -248,6 +264,7 @@ code {
 .blogText {
   margin-left: 100px;
   margin-right: 50px;
+  font-size: 22.5px;
   line-height: 160%;
   margin-top: 15px;
   margin-bottom: 15px;
