--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -56,17 +56,17 @@
   font-size: 22px;
   text-transform: uppercase;
   font-weight: bold;
-  color: gold;
+  color: #ffce00;
   text-align: center;
   padding-top: 60px;
 }
 
 .clickMe:hover {
-  background-color: teal;
+  background-color: midnightBlue;
 }
 
 .alive {
-  background-color: teal;
+  background-color: midnightBlue;
 }
 
 .projectInfoContainer {
@@ -84,6 +84,16 @@
   margin-top: 52px;
   font-family: Baskerville;
   font-size: 38px;
+  color: midnightBlue;
+}
+
+.math {
+  background-color: Gainsboro;
+  padding-right: 120px;
+  padding-left: 120px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
 }
 
 /*#hardCode {
@@ -107,7 +117,8 @@ hr {
 }
 
 .myPicContainer {
-  margin-top: 80px;
+  margin-top: 60px;
+  margin-bottom: 20px;
 }
 
 .projContainer {
@@ -120,9 +131,29 @@ hr {
   height: auto;
 }
 
+.lowCeiling {
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
+
+.bromiliad {
+  height: 330px;
+  width: auto;
+}
+
 #parabola, #parabolaBall, #polygon, #triangle {
   width: 350px;
   height: 350px;
+}
+
+#line {
+  width: 400px;
+  height: 40px;
+}
+
+#golden {
+  width: 500px;
+  height: 500px;
 }
 
 .penHolder {
@@ -158,7 +189,7 @@ hr {
   text-transform: uppercase;
   font-family: Aleo;
   font-size: 22px;
-  background-color: #0375b4;
+  background-color: #191970;
   width: 100%;
   height: 50px;
   color: #ffce00;
@@ -213,7 +244,7 @@ hr {
 .allposts {
   font-family: Baskerville;
   font-size: 20px;
-  margin-left: 88px;
+  /*margin-left: 88px;*/
   font-weight: bold;
   margin-bottom: -20px;
   margin-top: 25px;
@@ -243,6 +274,7 @@ hr {
 
   /*font-weight: bold;*/
   font-family: Impact;
+  color: midnightBlue;
 }
 
 li {
@@ -252,7 +284,16 @@ li {
 }
 
 .postlist li:hover {
-  background-color: teal;
+  background-color: mediumTurquoise;
+}
+
+.postlist li {
+  margin-top: 32px;
+}
+
+#twoLeaves {
+  width: 400px;
+  height: 400px;
 }
 
 .PortHeader {
@@ -260,7 +301,7 @@ li {
   font-size: 30px;
 }
 
-.linkText {
+.linkText, .linkTextAbout {
   padding-top: 8px;
   text-decoration: none;
   color: darkblue;
@@ -268,7 +309,11 @@ li {
   font-size: 19px;
 }
 
-.linkText:hover {
+.linkTextAbout {
+  margin-bottom: 15px;
+}
+
+.linkText:hover, .linkTextAbout:hover {
   color: blue;
 }
 
