--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -79,14 +79,14 @@
       <div layout="column" flex="30" id="picSide">
         <div class="myPicContainer" layout layout-align="center center">
           <!-- <div layout="row"> -->
-          <img class="myPic" src="styles/zzz6.png">
+          <img class="myPic" src="styles/face2.png">
         </div>
 
         <div layout="column" layout layout-align="center center" class="textCont">
           <div class="iconHolder" layout="row">
             <a href="http://github.com/zackstout">
               <img class="icon" src="styles/github_icon.svg"></a>
-              &emsp; <a class="linkText" href="http://github.com/zackstout"><span>
+              &emsp; <a class="linkTextAbout" href="http://github.com/zackstout"><span>
                 github.com/zackstout
               </span></a>
             </div>
@@ -96,7 +96,7 @@
             <div class="iconHolder" layout="row">
               <a href="https://www.linkedin.com/in/zack-stout-001/">
                 <img class="icon" src="styles/linkedin_icon.png"></a>
-                &emsp; <a class="linkText" href="https://www.linkedin.com/in/zack-stout-001/"><span>
+                &emsp; <a class="linkTextAbout" href="https://www.linkedin.com/in/zack-stout-001/"><span>
                   linkedin.com/in/zack-stout-001
                 </span></a>
               </div>
@@ -105,7 +105,7 @@
             </div>
 
             <div layout="row" class="emailCont" layout layout-align="center center">
-              <img class="icon" src="styles/gmail_icon2.ico"> &emsp; <a class="linkText" href="mailto:zackstout@gmail.com"><span>zackstout@gmail.com</span></a>
+              <img class="icon" src="styles/gmail_icon2.ico"> &emsp; <a class="linkTextAbout" href="mailto:zackstout@gmail.com"><span>zackstout@gmail.com</span></a>
             </div>
 
             <!-- </div> -->
