--- a/server/public/views/templates/portfolio.html
+++ b/server/public/views/templates/portfolio.html
@@ -31,7 +31,10 @@
 
 <div class="projContainer" layout="row">
   <div class="imageContainer">
+    <a class="linkText" href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">
+
     <img class="preview" src="styles/solo_preview.png" alt="">
+  </a>
   </div>
   <div class="projectInfoContainer">
 
@@ -71,9 +74,9 @@
 
 <div layout="column">
   <div class="projContainer" layout="row">
-    <div class="imageContainer">
+    <div class="imageContainer"><a class="linkText" href="https://github.com/zackstout/real-estate-listings">
       <img class="preview" src="styles/wkd5_preview.png" alt="">
-    </div>
+    </a></div>
     <div class="projectInfoContainer">
       <div class="containerContainer">
 
@@ -105,8 +108,9 @@
 
 
   <div class="projContainer" layout="row">
-    <div class="imageContainer">
+    <div class="imageContainer"><a class="linkText" href="https://github.com/zackstout/weekend4_assignment">
       <img class="preview" src="styles/wkd4_preview.png" alt="">
+    </a>
     </div>
     <div class="projectInfoContainer">
       <div class="containerContainer">
@@ -138,8 +142,10 @@
 
   <div class="projContainer" layout="row">
     <div class="imageContainer">
-      <img class="preview" src="styles/wkd3_preview.png" alt="">
+      <a class="linkText" href="https://github.com/zackstout/wkd3_assignment">
 
+      <img class="preview" src="styles/wkd3_preview.png" alt="">
+</a>
     </div>
     <div class="projectInfoContainer">
       <div class="containerContainer">
@@ -171,8 +177,10 @@
 
   <div class="projContainer" layout="row">
     <div class="imageContainer">
-      <img class="preview" src="styles/wkd2_preview.png" alt="">
+      <a class="linkText" href="https://github.com/zackstout/wkd2_assignment">
 
+      <img class="preview" src="styles/wkd2_preview.png" alt="">
+    </a>
     </div>
     <div class="projectInfoContainer">
       <div class="containerContainer">
